--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,57 @@ body {
 }
 
 /* COMMON */
+.wrapper {
+    height: 100vh;
+    width: 100%;
+}
+
+section, footer, main, div {
+    /* debug */
+    border: 1px dashed black;
+}
 
 /* UTILITIES */
+.flex {
+    display: flex;
+}
 
-/* HEADER */
-
-/* MAIN */
 /* sidebar section */
+.sidebar {
+    height: calc(100vh - 100px);
+    width: 150px;
+    
+    /* debug */
+    background-color: yellowgreen;
+}
 /* end sidebar section */
 
-/* content section */
-/* end content section */
+/* MAIN */
+main {
+    width: calc(100% - 150px);
+}
+
+.header {
+    height: 70px;
+    width: 100%;
+
+    /* debug */
+    background-color: darkgreen;
+}
+
+.content {
+    height: calc(100vh - 70px - 100px);
+    width: 100%;
+
+    /* debug */
+    background-color: chocolate;
+}
 
 /* FOOTER */
+footer {
+    height: 100px;
+    width: 100%;
+
+    /* debug */
+    background-color: blueviolet;
+}
