--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
 /* COMMON */
 .wrapper {
     height: 100vh;
@@ -28,9 +37,68 @@ body {
 .sidebar {
     height: calc(100vh - 100px);
     width: 200px;
+    font-size: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     
     /* debug */
     background-color: yellowgreen;
+    padding: 1rem;
+}
+
+.big-logo {
+    width: 90%;
+    padding-bottom: 1rem;
+}
+
+.symbol-list {
+    padding-right: 0.3rem;
+}
+
+.navigation-list li {
+    padding-bottom: 0.5rem;
+}
+
+.playlist-title {
+    text-transform: uppercase;
+    font-weight: 900;
+    color: white;
+    padding-bottom: 0.5rem;
+}
+
+.playlist li {
+    padding-bottom: 0.5rem;
+}
+
+.playlist li:first-child {
+    font-size: 1rem;
+}
+
+.square-plus {
+    font-size: 2rem;
+    vertical-align: middle;
+}
+
+.sidebar-download-icon {
+    width: 10%;
+    margin-right: 0.3rem;
+    vertical-align: middle;
+}
+
+.download {
+    font-size: 0.7rem;
+    padding-bottom: 0.3rem;
+}
+
+.sidebar-profile-icon {
+    width: 10%;
+    vertical-align: bottom;
+    margin-right: 0.5rem;
+}
+
+.profile {
+    padding-top: 0.3rem;
 }
 /* end sidebar section */
 
@@ -52,6 +120,7 @@ main {
 .content {
     height: calc(100vh - 80px - 100px);
     width: 100%;
+    overflow-y: scroll;
 
     /* debug */
     background-color: chocolate;
