--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* VARIABLES */
+:root {
+    --content-color: #141922;
+    --hover-green-color: #74A92A;
+    --footer-color: #282828;
+    --sidebar-text-color: #565656;
+}
+
 /* RESET */
 * {
     margin: 0;
@@ -41,9 +49,8 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
-    /* debug */
-    background-color: yellowgreen;
+    color: var(--sidebar-text-color);
+    background-color: black;
     padding: 1rem;
 }
 
@@ -65,6 +72,7 @@ ul {
     font-weight: 900;
     color: white;
     padding-bottom: 0.5rem;
+    padding-top: 0.8rem;
 }
 
 .playlist li {
@@ -73,6 +81,10 @@ ul {
 
 .playlist li:first-child {
     font-size: 1rem;
+}
+
+.sidebar-footer-hr {
+    border: 1px solid var(--sidebar-text-color);
 }
 
 .square-plus {
@@ -98,6 +110,8 @@ ul {
 }
 
 .profile {
+    color: white;
+    font-weight: 600;
     padding-top: 0.3rem;
 }
 /* end sidebar section */
@@ -106,14 +120,11 @@ ul {
 main {
     width: calc(100% - 200px);
 }
-
 /* header */
 .header {
     height: 80px;
     width: 100%;
-
-    /* debug */
-    background-color: darkgreen;
+    background-color: black;
 }
 /* end header*/
 /* content */
@@ -121,9 +132,7 @@ main {
     height: calc(100vh - 80px - 100px);
     width: 100%;
     overflow-y: scroll;
-
-    /* debug */
-    background-color: chocolate;
+    background-color: var(--content-color);
 }
 /* end content section */
 
@@ -131,7 +140,5 @@ main {
 footer {
     height: 100px;
     width: 100%;
-
-    /* debug */
-    background-color: blueviolet;
+    background-color: var(--footer-color);
 }
