Add: header for desktop

--- a/css/style.css
+++ b/css/style.css
@@ -122,9 +122,22 @@ main {
 }
 /* header */
 .header {
+    text-align: end;
     height: 80px;
     width: 100%;
     background-color: black;
+    padding: 1.1rem;
+}
+
+.upgrade-button {
+    font-size: 0.8rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: white;
+    border: 1px solid white;
+    border-radius: 2rem;
+    padding: 0.8rem 1rem;
+    display: inline-block;
 }
 /* end header*/
 /* content */
