--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,6 @@
     box-sizing: border-box;
 }
 
-img {
-    max-width: 100%;
-}
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -24,6 +20,10 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+img {
+    max-width: 100%;
 }
 
 ul {
@@ -59,9 +59,15 @@ ul {
     padding-bottom: 1rem;
 }
 
-.symbol-list {
-    padding-right: 0.3rem;
+.small-logo {
+    display: none;
 }
+
+.list-icon {
+    width: 12%;
+    vertical-align: bottom;
+}
+
 
 .navigation-list li {
     padding-bottom: 0.5rem;
@@ -77,6 +83,10 @@ ul {
 
 .playlist li {
     padding-bottom: 0.5rem;
+}
+
+.symbol-list {
+    padding-right: 0.3rem;
 }
 
 .playlist li:first-child {
