Content's categories in desktop and first tests in responsive

--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -1,6 +1,8 @@
 /* size m */
 @media screen and (max-width: 1100px) {
-    
+    .categories-list {
+        flex-wrap: wrap;
+    }
 }
 
 /* size s */
