Add: Size variables

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 /* VARIABLES */
 :root {
+    /* colours */
     --content-color: #141922;
     --hover-green-color: #74A92A;
     --footer-color: #282828;
     --sidebar-text-color: #565656;
+
+    /* sizes */
+    --sidebar-width: 200px;
+    --header-height: 80px;
+    --footer-height: 100px;
 }
 
 /* RESET */
@@ -43,8 +49,8 @@ ul {
 
 /* SIDEBAR */
 .sidebar {
-    height: calc(100vh - 100px);
-    width: 200px;
+    height: calc(100vh - var(--footer-height));
+    width: var(--sidebar-width);
     font-size: 0.9rem;
     display: flex;
     flex-direction: column;
@@ -128,13 +134,13 @@ ul {
 
 /* MAIN */
 main {
-    width: calc(100% - 200px);
+    width: calc(100% - var(--sidebar-width));
 }
 
 /* header */
 .header {
     text-align: end;
-    height: 80px;
+    height: var(--header-height);
     width: 100%;
     background-color: black;
     padding: 1.1rem;
@@ -153,10 +159,10 @@ main {
 /* end header*/
 /* content */
 .content {
-    height: calc(100vh - 80px - 100px);
+    height: calc(100vh - var(--header-height) - var(--footer-height));
     width: 100%;
     padding-top: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: var(--content-color);
 }
 
@@ -175,7 +181,7 @@ main {
 
 /* FOOTER */
 footer {
-    height: 100px;
+    height: var(--footer-height);
     width: 100%;
     background-color: var(--footer-color);
 }
