--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ footer {
     width: 30%;
     height: var(--footer-height);
     padding: 1rem;
+    display: flex;
 }
 
 .song-name {
@@ -264,14 +265,15 @@ footer {
 }
 
 .center-footer {
-    width: 40%;
+    width: 45%;
     height: var(--footer-height);
     padding: 1rem;
 }
 
 .commands {
     color: white;
-    text-align: center
+    text-align: center;
+    padding-bottom: 1rem;
 }
 
 .command-symbol {
@@ -284,13 +286,42 @@ footer {
     padding: 0 1rem;
 }
 
-.right-footer {
-    width: 30%;
-    height: var(--footer-height);
+.listened-time {
+    font-size: 0.7rem;
+    color: white;
+    padding-right: 1rem;
+}
 
-    /* debug */
-    background-color: aqua;
+.bar-section {
+    text-align: center;
 }
-.left-footer {
-    display: flex;
+
+.bar {
+    width: 50%;
+    height: 3px;
+    background-color: var(--sidebar-text-color);
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
 }
+
+.listened-bar {
+    width: 23%;
+    height: 3px;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.song-total-duration {
+    font-size: 0.7rem;
+    color: white;
+    padding-left: 1rem;
+}
+
+.right-footer {
+    width: 25%;
+    height: var(--footer-height);
+}
+
