--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ footer {
 }
 
 .left-footer {
-    width: 30%;
+    width: 40%;
     height: var(--footer-height);
     padding: 1rem;
     display: flex;
@@ -265,7 +265,7 @@ footer {
 }
 
 .center-footer {
-    width: 45%;
+    width: 40%;
     height: var(--footer-height);
     padding: 1rem;
 }
@@ -321,7 +321,14 @@ footer {
 }
 
 .right-footer {
-    width: 25%;
+    width: 35%;
     height: var(--footer-height);
+    padding: 1rem;
+    display: flex;
+    align-items: center;
 }
 
+.right-symbol {
+    color: white;
+    padding-right: .8rem;
+}
