--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ main {
     text-align: end;
     height: var(--header-height);
     width: 100%;
-    background-color: rgba(0, 0, 0, 6);
+    background-color: rgba(0, 0, 0, 9);
     padding: 1.1rem;
 }
 
@@ -203,6 +203,7 @@ main {
 .categories-list li {
     color: var(--sidebar-text-color);
     text-transform: uppercase;
+    margin-bottom: 15px;
 }
 
 .green-line-horizontal {
@@ -267,18 +268,22 @@ main {
     display: none;
 }
 
-.albums:hover {
-    filter: opacity(.5);
+.albums:hover .play-hover {
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
 }
 
-.albums:hover .play-hover {
-    font-size: 5rem;
+.albums:hover .photo {
+    opacity: .5;
+}
+
+.albums .play-hover .fa-regular {
+    font-size: 3.5rem;
     color: white;
-    position: absolute;
-    top: 50%;
-    height: 50%;
-    transform: (-50%, -50%);
-    z-index: 100;
 }
 /* end content section */
 
@@ -390,12 +395,13 @@ footer {
 }
 
 .bar:hover .ball-hover {
-    height: 5px;
-    width: 5px;
+    display: block;
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
     position: absolute;
-    top: 0;
-    right: 3rem;
+    top: -3px;
+    left: 23%;
     z-index: 100;
     background-color: white;
 }
